2006-03-12  Gabor Csardi  <csardi@cool100.rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (get.shortest.paths) :
	to argument added
	* interfaces/R/src/rinterface.c (R_igraph_get_shortest_paths) : 
	updated

2006-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten,
	does not work yet

2006-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (ba.game) : bug corrected

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.idage) :
	error estimation added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_idage)
	(R_igraph_measure_dynamics_idage_debug) : error estimation added

2006-03-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.ncol) : added predef
	argument
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_ncol) : 
	added predef argument

2006-03-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai,layout.merge) :
	verbose option (progress bar) added
	* interfaces/R/src/rinterface.c (R_igraph_progress_handler) : added
	(R_igraph_layout_kamada_kawai, R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold)
	(R_igraph_layout_fruchterman_reingold_3d, R_igraph_layout_merge_dla) :
	updated for verbose option

2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.merge) : add graph list 
	parameter
	* interfaces/R/src/rinterface.c (R_igraph_layout_merge_dla) : updated

	* interfaces/R/igraph/R/operators.r (graph.disjoint.union) :
	bug corrected, calls R_igraph_disjoint_union

	* interfaces/R/igraph/R/operators.R (graph.compose, "%c%") : added
	* interfaces/R/src/rinterface.c (R_igraph_compose) : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.complementer) : added